[tool.poetry]
name = "premiumbondprizechecker"
version = "0.1.0"
description = ""
authors = ["ThomasStalley <t.stalley@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
scrapy = "^2.11.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

